# NLQ

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
docs/: setup.md
eval/: dataset.yaml  runner.py
src/nl_db/: agent.py  cli.py  config.py  conversation.py  executor.py  formatter.py  generator.py  logging.py  nl_errors.py  pipeline.py  validator.py
src/nl_db/llm/: _openai_common.py  anthropic_provider.py  openai_compatible.py  openai_provider.py  provider.py  registry.py
src/nl_db/mcp/: server.py  tools.py
src/nl_db/prompts/: builder.py  examples.py  paraphrase.py  system.py
src/nl_db/schema/: base.py  cache.py  sqlite.py
src/nl_db/web/: app.py  launcher.py
tests/: conftest.py
tests/fixtures/: build_sample_db.py
tests/integration/: test_agent.py  test_cli.py  test_mcp_server.py  test_pipeline.py
tests/unit/: test_config.py  test_conversation.py  test_eval_runner.py  test_executor_formatter.py  test_generator_validator.py  test_llm.py  test_nl_errors.py  test_prompts.py  test_sample_db.py  test_save_settings.py  test_schema.py
