[project]
name = "nl-db"
version = "0.1.0"
description = "Natural language database querying with multi-provider LLM and MCP server support"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Shreyans Jain" }]
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlglot>=25.0",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "mcp>=1.0",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "streamlit>=1.36",
    "pandas>=2.2",
    "tomli-w>=1.0",
]

[project.scripts]
nl-db = "nl_db.cli:app"
nl-db-mcp = "nl_db.mcp.server:main"
nl-db-ui = "nl_db.web.launcher:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nl_db"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/", "eval/", "src/nl_db/web/"]

[[tool.mypy.overrides]]
module = ["sqlglot.*", "mcp.*", "streamlit.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end tests that need the full stack",
]
